# PixelsWinCpp

./: CMakeLists.txt  Pixel.cpp  PixelsWinCpp.vcxproj  PixelsWinCpp.vcxproj.filters  README.md  app_main.cpp  main.cpp  pixels_resources.rc  test_client_main.cpp  tray_main.cpp
App/: CliOptions.cpp  CliOptions.h  ConfigManager.cpp  ConfigManager.h  DiceManager.cpp  DiceManager.h  DieConnection.cpp  DieConnection.h
App/Runtime/: PixelsRuntimeService.cpp  PixelsRuntimeService.h  RuntimeModels.h
App/Server/: RollServer.cpp  RollServer.h
App/Tray/: TrayApp.cpp  TrayApp.h  TrayResources.h  TraySettings.cpp  TraySettings.h
Systemic/Pixels/: Pixel.h
docs/: pixels_ble_roll_latency_plan.md  plan-advert-recovery.md  plan-revised.md  plan-stability-v2.md
